--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
     <section class="sedan-container">
       <img src="images/icon-sedans.svg" alt="Sedan Icon" class="sedan-img">
-      <h2>Sedans</h2>
+      <h1>Sedans</h1
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
       or on your next road trip.</p>
       <button>Learn More</button>
@@ -24,7 +24,7 @@
 
     <section class="suv-container">
       <img src="images/icon-suvs.svg" alt="SUV Image" class="suvs-img">  
-      <h2>SUVs</h2>
+      <h1SUVs</h1
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
       and off-road adventures.</p>
       <button>Learn More</button>
@@ -32,7 +32,7 @@
 
     <section class="luxury-container">
       <img src="images/icon-luxury.svg" alt="Luxury Icon" class="luxury-img">
-      <h2>Luxury</h2>
+      <h1Luxury</h1>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
       rental and arrive in style.</p>
       <button>Learn More</button>
